# textEditor

./: .gitignore  CMakeLists.txt  README.md  application.qrc  main.cpp
src/: MainWindow.cpp  MainWindow.hpp  main.cpp
